# python-crud

./: README.md  docker-compose.yaml
01-crud-exercise/: seed.sql
03-fast-api-crud/: docker-compose.yaml  main.py  people.json  seed.sql
04-fast-api-with-db/: main.py  people.json
dependencies/: pyproject.toml
my_super-project/: sql_app.db
oauth2/: pyproject.toml
src/: index.py
