[tool.poetry]
name = "fastapi-docs"
version = "0.1.0"
description = ""
authors = ["rcoelho <rcoelho@milenio.capital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
